[package]
name = "gridsim-ui"
version = "0.3.1"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "Visualizing gridsim grids"
license = "MIT"
documentation = "https://docs.rs/gridsim-ui/"
repository = "https://github.com/vadixidav/gridsim-ui"

[dependencies]
gridsim = "0.2.1"
rayon = "1.0.1"
glium = "0.19.0"
cgmath = "0.16.0"
serde = { version = "1.0.70", optional = true }

[features]
default = ["multinode"]
multinode = ["serde"]

[dev-dependencies]
os_pipe = "0.6.1"
