[package]
name = "gridsim-ui"
edition = "2018"
version = "0.4.1"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "Visualizing gridsim grids"
license = "MIT"
documentation = "https://docs.rs/gridsim-ui/"
repository = "https://github.com/vadixidav/gridsim-ui"

[dependencies]
gridsim = "0.3.2"
rayon = "1.1.0"
glium = "0.25.1"
cgmath = "0.17.0"
serde = { version = "1.0.97", optional = true }

[features]
default = ["multinode"]
multinode = ["serde"]

[dev-dependencies]
os_pipe = "0.8.1"
